feat: add status to replace the activated
